# Win32-X11-Browser

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  RECOMMENDATION.md  buildwin.sh  runwin.sh  shell.nix  testwin.sh
.claude/skills/run-desktopwebview/: SKILL.md  driver.sh
assets/: filetypes.json  ua.css
assets/fonts/: README.md
assets/kernels/: base64.cl
include/: Audio.hpp  BaseWindow.hpp  Browser.hpp  Css.hpp  Debugger.hpp  Documents.hpp  Font.hpp  JsEngine.hpp  Layout.hpp  Mp3Decoder.hpp  Net.hpp  Optimizer.hpp  Paint.hpp  Svg.hpp  Video.hpp  Wrapper.hpp
include/core/: Base64.hpp  Browser.hpp  CMakeLists.txt  Cl.hpp  Wrapper.hpp
include/css/: Css.hpp  Font.hpp  HandlerCssVariable.hpp  Paint.hpp
include/documents/: Documents.hpp
include/elements/: Input.hpp
include/js/: JsEngine.hpp  Variabel.hpp
include/layout/: HtmlElement.hpp  Image.hpp  Layout.hpp
include/multimedia/: AudioPlayer.hpp
include/network/: Net.hpp
src/: Audio.cpp  AudioPlayer.cpp  Base64.cpp  BaseWindow.cpp  Browser.cpp  Cl.cpp  Css.cpp  Font.cpp  Image.cpp  JsEngine.cpp  Layout.cpp  Mp3Decoder.cpp  Net.cpp  Optimizer.cpp  Paint.cpp  Pdf.cpp  Svg.cpp  Video.cpp  Wrapper.cpp  main.cpp
src/core/: Base64.cpp  BaseWindow.cpp  Browser.cpp  Cl.cpp  Optimizer.cpp  Wrapper.cpp  stb_impl.cpp
src/css/: Css.cpp  Font.cpp  HandlerCssVariable.cpp  Paint.cpp
src/documents/: Pdf.cpp
src/elements/: Input.cpp
src/js/: JsEngine.cpp  Variabel.cpp
src/layout/: HtmlElement.cpp  Image.cpp  Layout.cpp  Svg.cpp
src/multimedia/: Audio.cpp  AudioPlayer.cpp  Mp3Decoder.cpp  Video.cpp
src/network/: Net.cpp
test/: test_audio.cpp  test_base64.cpp  test_browser.cpp  test_css.cpp  test_font.cpp  test_image.cpp  test_input.cpp  test_js.cpp  test_layout.cpp  test_net.cpp  test_optimizer.cpp  test_paint.cpp  test_pdf.cpp  test_svg.cpp  test_video.cpp  test_windowpaint.cpp  test_wrapper.cpp
